# projects

./: .gitignore  README.md  move_constructors.cpp
RpcService/: Message.h  Messages.h  MessagesHandler.h  README.md  RpcService.pro  TargetMessages.h  main.cpp  rpcservice.cpp  rpcservice.h  rpcservice.hpp  target_messages.h
T9/: CMakeLists.txt  Doxyfile  main.cpp  message_parser.h  unit_tests.cpp
TwoGisTest/: AlgoProcessActivity.qml  LoadFileActivity.qml  TwoGisTest.pro  abstractalgo.cpp  abstractalgo.h  abstractalgocreator.h  algomanager.cpp  algomanager.h  fileparser.cpp  fileparser.h  hashalgo.cpp  hashalgo.h  main.cpp  main.qml  qml.qrc  unorderedmapalgo.cpp  unorderedmapalgo.h
enginetest/: components.h  crtp.cpp  crtp.h  interface.h  main.cpp  multiinterface.cpp  multiinterface.h  untitled.pro
jsonvisualizer/: ReadMe.txt  data.json  jsonparser.cpp  jsonparser.h  jsonvisualizer.pro  main.cpp  main.qml  parametersmodel.cpp  parametersmodel.h  src.pro
jsonvisualizer/tests/: tests.pro
jsonvisualizer/tests/jsonparser/: jsonparser.pro  jsonparsertest.cpp
qmltableview/: filephonebookmodelloader.cpp  filephonebookmodelloader.h  input_table.in  iphonebookmodelloader.h  main.cpp  main.qml  phonebookmodel.cpp  phonebookmodel.h  qmltableview.pro
quicksort/: main.cpp
transformvisitor/: CMakeLists.txt  geopoint.cpp  geopoint.h  geotransform.cpp  geotransform.h  main.cpp  point.cpp  point.h  transform.cpp  transform.h  updatable.h  visitor.h
typelists/: CMakeLists.txt  main.cpp  typelist.h  visitor.cpp  visitor.h
(+1 files in other folders)
